[metadata]
name = scorch
version = 0.0.10
description = Alternative scorer for the CoNLL-2011/2012 shared tasks on coreference resolution.
url = https://github.com/LoicGrobol/scorch
author = Loïc Grobol
author_email=loic.grobol@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6

[options]
packages = scorch
install_requires =
    docopt
    scipy
    numpy
tests_require = pytest

[options.entry_points]
console_scripts =
    scorch = scorch.scorch:main_entry_point

[pycodestyle]
max-line-length = 100
ignore = E226
