[metadata]
name = scorch
version = attr: scorch.__version__
description = Alternative scorer for the CoNLL-2011/2012 shared tasks on coreference resolution.
url = https://github.com/LoicGrobol/scorch
license = MIT
author = Loïc Grobol
author_email = loic.grobol@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Environment :: Console
keywords =
    nlp
    coreference
    metric
    conll

[options]
packages = scorchhttps://stackoverflow.com/questions/30001762/how-to-determine-the-minimal-python-version-in-setup-py
python_requires = >=3.6
install_requires =
    docopt >= 0.6
    scipy >= 0.17.0
    numpy
tests_require = pytest

[options.entry_points]
console_scripts =
    scorch = scorch.scorch:main_entry_point

[pycodestyle]
max-line-length = 100
ignore = E226
