[metadata]
name = scorch
version = 0.1.0
description = Alternative scorer for the CoNLL-2011/2012 shared tasks on coreference resolution.
url = https://github.com/LoicGrobol/scorch
license = MIT
author = Loïc Grobol
author_email = loic.grobol@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Environment :: Console
keywords =
    nlp
    coreference
    metric
    conll

[options]
packages = scorch
python_requires = >=3.7
install_requires =
    docopt-ng >= 0.7
    numpy
    scipy >= 0.17.0
    tqdm

[options.entry_points]
console_scripts =
    scorch = scorch.main:main_entry_point

[flake8]
max-line-length = 100
ignore = E203,E266,E501,W503
max-complexity = 18

[mypy]
allow_redefinition = True
